chore: w.i.p NotNullByDefault and minor style cleanup